// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`focus switching > then renders left focus indicator when focused on changes 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118ma[39m change a                                                                    [38;2;76;62;118mAlice[39m[39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m[1mchange a[22m[39m                       [49m[38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: all (a)[0m                                                                      [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`focus switching > then renders right focus indicator when focused on files 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m [38;2;76;62;118ma[39m change a                                                                    [38;2;76;62;118mAlice[39m[39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m◆ change a[0m                       [38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰜈[39m [38;2;165;255;144msrc/main.tsx[39m                                                                 [38;2;165;255;144m󰐕 10[39m [49m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/main.tsx (a)[0m                                                             [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`loading state > then renders loading indicator 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (0)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[38;2;76;62;118m Loading...[39m[0m                      [38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff[0m                                                                               [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`move mode > then renders move indicator on cursor change 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (2)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118ma[39m change a                                                                    [38;2;76;62;118mAlice[39m[39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m↕ [39m[38;2;250;208;0m[1mchange a[22m[39m                     [49m[38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m◆ change b[0m                       [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: all (a)[0m                                                                      [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;
